test/pos/literals01.msmt_
; Sorts
(declare-sort List 1)
(declare-sort Char 0)

; Constants
(declare-const lit$cat (List Char))



; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((_VV##1 (List Char))) (=> (= _VV##1 lit$cat) (= (strLen _VV##1) 3))))
(constraint (forall ((_VV##2 (List Char))) (=> (= _VV##2 lit$cat) (= _VV##2 lit$cat))))

