test/neg/literals.msmt_
; Sorts
(declare-sort List 1)
(declare-sort Char 0)

; Constants
(declare-const lit#foo (List Char))
(declare-const lit#bar (List Char))



; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall () (=> True (= lit#bar lit#foo))))

